added lucene and created new-message-hook